[feat] Batch 데이터 처리 개선 및 요청 인덱스 오류 수정